--- a/.github/workflows/daily_analysis.yml
+++ b/.github/workflows/daily_analysis.yml
@@ -2,8 +2,8 @@ name: Análisis Diario de Gastos
 
 on:
   schedule:
-    # Ejecutar a las 13:00 UTC (10:00 AM Argentina) de Lunes a Viernes
-    - cron: '0 13 * * 1-5'
+    # Ejecutar a las 15:30 UTC (12:30 PM Argentina) de Lunes a Viernes
+    - cron: '30 15 * * 1-5'
   workflow_dispatch: # Permite ejecutarlo manualmente desde GitHub
 
 jobs:
