--- a/.github/workflows/daily_analysis.yml
+++ b/.github/workflows/daily_analysis.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Setup Chrome
+        uses: browser-actions/setup-chrome@latest
+
       - name: Instalar dependencias
         run: |
           pip install -r requirements.txt
