--- a/.github/workflows/daily_analysis.yml
+++ b/.github/workflows/daily_analysis.yml
@@ -54,7 +54,24 @@ jobs:
         run: |
           git config --global user.name 'Bot de Gastos'
           git config --global user.email 'bot@noreply.github.com'
-          git add datos/ index.html *.png 2>/dev/null || true
-          git commit -m "📊 Reporte diario actualizado $(date +'%Y-%m-%d')" || exit 0
-          git push
-
+          
+          # Debug: show what files exist
+          echo "=== Files in datos/ ==="
+          ls -la datos/ || echo "No datos directory"
+          echo "=== index.html ==="
+          ls -la index.html || echo "No index.html"
+          
+          # Add files explicitly (don't use wildcards that might fail)
+          git add datos/ || echo "No datos changes"
+          git add index.html || echo "No index.html changes"
+          
+          # Add any PNG files if they exist
+          find . -maxdepth 1 -name "*.png" -exec git add {} \;
+          
+          # Show what's staged
+          echo "=== Staged changes ==="
+          git status
+          
+          # Commit and push
+          git diff --staged --quiet || git commit -m "📊 Reporte diario actualizado $(date +'%Y-%m-%d')"
+          git push || echo "Nothing to push"
