--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ __pycache__/
 !requirements.txt
 !field_config.json
 !gastos_completos.json
+!datos/*.json
+datos/*_pendientes.json
+
 
 # Environment
 .env
